--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
 #storybook-root {
-    width: 100%;
+  padding-top: 15px;
+}
+
+.docs-story > div > div {
+  overflow: hidden;
 }
