New components + Some small update

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,9 @@ a,
   overflow: hidden;
 }
 
+.innerZoomElementWrapper {
+  @apply @container/main;
+}
 .docs-story > div > div {
   overflow: hidden;
 }
