--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,3 +41,7 @@ a,
   top: 47%;
   transform: translateY(-50%);
 }
+
+.dotted-focus {
+  @apply outline-2 outline-offset-4 outline-acu-purple-100 focus:outline-dotted;
+}
