--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,8 @@ a,
   overflow: hidden;
 }
 
-#storybook-root:has(.main-header) {
+#storybook-root:has(.main-header),
+#story--components-header-main--primary:has(.main-header) {
   padding-top: 0;
   min-height: 100vh;
 }
